<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.maddsoft</groupId>
  <artifactId>hbadgerstation</artifactId>
  <version>0.1-SNAPSHOT</version>

  <properties>
    <maven.compiler.source>24</maven.compiler.source>
    <maven.compiler.target>24</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <javafx.version>24.0.1</javafx.version>
    <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.dizitart</groupId>
        <artifactId>nitrite-bom</artifactId>
        <version>4.3.0</version>
        <scope>import</scope>
        <type>pom</type>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.dizitart</groupId>
      <artifactId>nitrite</artifactId>
    </dependency>

    <dependency>
      <groupId>org.dizitart</groupId>
      <artifactId>nitrite-mvstore-adapter</artifactId>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <dependency>
      <groupId>org.controlsfx</groupId>
      <artifactId>controlsfx</artifactId>
      <version>11.2.2</version>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.38</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.19.0</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-configuration2</artifactId>
      <version>2.12.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.17.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j2-impl</artifactId>
      <version>2.24.3</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.24.3</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.24.3</version>
      <scope>compile</scope>
    </dependency>

    <dependency>
      <groupId>org.imgscalr</groupId>
      <artifactId>imgscalr-lib</artifactId>
      <version>4.2</version>
    </dependency>

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.38</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>--add-exports</arg>
            <arg>org.controlsfx.controls/impl.org.controlsfx.skin=hbadgerstation</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>${javafx.maven.plugin.version}</version>
        <configuration>
          <mainClass>io.maddsoft.hbadgerstation.HBadgerStation</mainClass>
          <options>--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED --add-exports=org.controlsfx.controls/impl.org.controlsfx.skin=hbadgerstation</options>
          <stripDebug>true</stripDebug>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <configuration>
          <outputDirectory>target/jmods</outputDirectory>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <includeScope>runtime</includeScope>
              <outputDirectory>target/jmods</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.panteleyev</groupId>
        <artifactId>jpackage-maven-plugin</artifactId>
        <configuration>
          <name>HBadgerStation</name>
          <appVersion>0.1</appVersion>
          <vendor>Maddsoft</vendor>
          <licenseFile>LICENSE</licenseFile>
          <runtimeImage>${env.JAVA_HOME}</runtimeImage>
          <module>hbadgerstation/io.maddsoft.hbadgerstation.HBadgerStation</module>
          <modulePaths>
            <modulePath>target/jmods</modulePath>
          </modulePaths>
          <destination>target/dist</destination>
          <copyright>Copyright (c) 2025 Daniel Madejek</copyright>
          <javaOptions>
            <option>--enable-preview</option>
            <option>-Dfile.encoding=UTF-8</option>
            <option>--add-exports=org.controlsfx.controls/impl.org.controlsfx.skin=hbadgerstation</option>
            <option>-Xmx8192m</option>
          </javaOptions>
        </configuration>

        <executions>
          <execution>
            <id>win</id>
            <configuration>
              <winMenu>true</winMenu>
              <winDirChooser>true</winDirChooser>
              <winUpgradeUuid>8bdc67d2-64c4-40be-ab61-33e3850e5183</winUpgradeUuid>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>